--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Jesper Nyhlén Portfolio" />
+        <meta
+            name="description"
+            content="Jesper Nyhlén Portfolio - Moderna lösningar för webbsidor och applikationer - Frontend/backend-utvecklare"
+        />
         <meta name="author" content="Jesper Nyhlén" />
-        <title>Jesper Nyhlén Portfolio</title>
+        <link rel="icon" href="../src/images/favicon.ico" type="image/x-icon" />
+        <title>Jesper Nyhlén Portfolio | Webbutvecklare</title>
     </head>
     <body>
         <noscript>
